finalize backend v1 with security, testing and docker support